--- a/client/src/components/navbar/navbar.styles.scss
+++ b/client/src/components/navbar/navbar.styles.scss
@@ -8,6 +8,7 @@
   align-items: center;
   background: #b94444;
   box-shadow: 0 0.2vmin 0.5vmin black;
+  z-index: 10000;
 
   .leftside {
     display: flex;
